<resources>
    <string name="app_name">TBH</string>
    <string name="name">Name</string>
    <string name="key_change_name">key_change_name</string>
    <string name="key_change_password">key_change_password</string>
    <string name="key_delete_account">key_delete_account</string>
    <string name="answer_anonymously">Answer anonymously …</string>
    <string name="send">Send</string>
    <string name="continu">Continue</string>
    <string name="change_name">Change Name</string>
    <string name="name_change_alert">Please note that, changing Profile Name will also change your unique link.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password (again)</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_delete_alert">Your all data will be deleted. Do you want to continue?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_link">Don\'t have account? Sign Up.</string>
    <string name="login">Login</string>
    <string name="poll_question">Question</string>
    <string name="start_poll_text_view">Write something and let your friends answer anonymously</string>
    <string name="ask_question">Type a question, idea …</string>
    <string name="start_poll">Start</string>
    <string name="show_results">Answers</string>
    <string name="share_poll">Attach to Snap</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in_here">Have an account? Sign In</string>
    <string name="results">Answers</string>
    <string name="no_answers_yet">No answers yet!</string>
    <string name="changing">Changing …</string>
    <string name="password_changed">Password Changed</string>
    <string name="failed_to_update_password">Failed to update password</string>
    <string name="old_pass_incorrect">Old password is incorrect</string>
    <string name="enter_required_field">Please enter the required fields</string>
    <string name="must_be_characters">Password must be at least 6 characters !</string>
    <string name="pass_no_match">Passwords doesn\'t match!</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="poll_not_exist">Sorry! This Question doesn\'t exist</string>
    <string name="fill_detail">Please fill details</string>
    <string name="answer_sent">Your answer sent successfully!</string>
    <string name="logging_in">Logging In…</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="sign_in">Sign In</string>
    <string name="please_type_poll_ques">Please type a Question!</string>
    <string name="change_poll_question">Change Question</string>
    <string name="delete_poll">Delete Question</string>
    <string name="copy_poll_link">Copy Link</string>
    <string name="poll_link_copied">Link Copied</string>
    <string name="answer">Answer Anonymously</string>
    <string name="s_poll_anonymously">\'s Question anonymously</string>
    <string name="signing_up">Signing Up …</string>
    <string name="settings">Settings</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="app_version">App Version</string>
    <string name="somebody_answered">Somebody answered your Question</string>
    <string name="check_connection">Please check your network connection!</string>
    <string name="question1">How would you describe me to others?😳</string>
    <string name="question2">Describe me in three words?</string>
    <string name="question3">Tell me something honestly</string>
    <string name="question4">What did you think when you first met me?</string>
    <string name="question5">Hot🔥 or Not</string>
    <string name="question6">Send me your last copied text?</string>
    <string name="question7">Miss anyone?😢</string>
    <string name="question8">I would love you, if: </string>
    <string name="question9">👿Something you hate about me?</string>
    <string name="question10">Ever done anything illegal?</string>
    <string name="block_sender">Block Sender</string>
    <string name="report">Report</string>
    <string name="permanent">permanent</string>
    <string name="twenty_four">24 hours</string>
    <string name="forty_eight">48 hours</string>
    <string name="you_cant_reply">You can\'t reply to this Question</string>
    <string name="your_device_is_on_blacklist_for">Your device is on blacklist for:</string>
    <string name="close">Close</string>
    <string name="key_contact_support">key_contact_support</string>
    <string name="key_version_name">key_version_name</string>
    <string name="attach_to_snap">Attach to Snap</string>
    <string name="terms_text_view">By signing up, you agree to the Terms of Service and acknowledge the Privacy Policy.</string>
    <string name="key_terms_of_service">key_terms_of_service</string>
    <string name="key_privacy_policy">key_privacy_policy</string>
    <string name="new_answers">%1$d new Answers</string>

</resources>
